Fix Desktop: Layout overlap by setting breakpoint to 1024px. Icons used instead of Flags

--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ a {
     visibility: hidden;
 }
 
-@media (min-width: 900px) {
+@media (min-width: 1024px) {
     .nav-menu {
         display: flex;
         position: absolute;
@@ -650,7 +650,7 @@ i[class*=" ph"] {
 /* Mobile Menu Btn */
 
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
     .mobile-menu-btn {
         display: none !important;
     }
